--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# custom ignore
 /Assets/ThirdParty
 /Assets/ThirdParty.meta
